code/codeforanalyzingkcwislacslenses_/ppxf_kinematics_SLACS_lenses/SDSSJ0330-0020/.ipynb_checkpoints/nohup_syst_adjust_082622-checkpoint.txt
  File "SDSSJ0330-0020_ppxf_kinematics_systematics_adjust_contam.py", line 220
    if pp.chi2 < 1"
                  ^
SyntaxError: EOL while scanning string literal
